--- a/work/amazon-web-services/website-master_cloudformation.yml
+++ b/work/amazon-web-services/website-master_cloudformation.yml
@@ -68,15 +68,21 @@ Metadata:
       embeds: []
       isrelatedto:
         - b624f20c-b645-4277-ad42-12373ed9fc75
+        - edcb3b5d-d51d-450b-8bb4-2102ea4e48b0
     b624f20c-b645-4277-ad42-12373ed9fc75:
       size:
         width: 60
         height: 60
       position:
-        x: 330
-        'y': 60
+        x: 540
+        'y': 240
       z: 1
       embeds: []
+      dependson:
+        - edcb3b5d-d51d-450b-8bb4-2102ea4e48b0
+      isrelatedto:
+        - edcb3b5d-d51d-450b-8bb4-2102ea4e48b0
+        - 460e37b9-5a5e-4e40-bb4f-3e3e1812de7a
     27a38a95-180c-4816-94dd-bdd8a422a24f:
       source:
         id: 440feda6-b280-4cad-97aa-310a1c3aeb64
@@ -102,7 +108,7 @@ Metadata:
         height: 60
       position:
         x: 420
-        'y': 90
+        'y': 70
       z: 1
       embeds: []
     2c48c8dd-e46f-4e1b-84f1-78691af3bebe:
@@ -111,7 +117,7 @@ Metadata:
         height: 60
       position:
         x: 540
-        'y': 90
+        'y': 70
       z: 1
       embeds: []
       isrelatedto:
@@ -121,10 +127,13 @@ Metadata:
         width: 60
         height: 60
       position:
-        x: 660
-        'y': 90
-      z: 1
+        x: 690
+        'y': 240
+      z: 2
+      parent: 36aeebf0-58a6-4554-8081-118ba6eef68e
       embeds: []
+      dependson:
+        - 36aeebf0-58a6-4554-8081-118ba6eef68e
       isrelatedto:
         - 2c48c8dd-e46f-4e1b-84f1-78691af3bebe
     c59d5ed8-abc2-4337-bfc1-69a2700f001e:
@@ -133,11 +142,111 @@ Metadata:
         height: 60
       position:
         x: 540
-        'y': 160
+        'y': 150
       z: 1
       embeds: []
       isassociatedwith:
         - 171e46d2-f281-4e5b-bdf5-792b7de9b847
+    bb638d8a-6094-4cfd-9506-079048c2e1f0:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 750
+        'y': 90
+      z: 1
+      embeds: []
+    58a62a0c-c5e9-417d-8708-ff4027244a7b:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 870
+        'y': 90
+      z: 1
+      embeds: []
+      isrelatedto:
+        - bb638d8a-6094-4cfd-9506-079048c2e1f0
+    36aeebf0-58a6-4554-8081-118ba6eef68e:
+      size:
+        width: 150
+        height: 150
+      position:
+        x: 660
+        'y': 180
+      z: 1
+      embeds:
+        - 5dadd00b-4e5c-4378-9cbb-8c979fe4216d
+    fee20551-28de-4c79-b0f8-6c754f6aa999:
+      source:
+        id: 5dadd00b-4e5c-4378-9cbb-8c979fe4216d
+      target:
+        id: 36aeebf0-58a6-4554-8081-118ba6eef68e
+      z: 2
+    b057b6c1-b7ca-46ff-be96-8e20ba857e06:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 840
+        'y': 240
+      z: 1
+      embeds: []
+      dependson:
+        - 5dadd00b-4e5c-4378-9cbb-8c979fe4216d
+    edcb3b5d-d51d-450b-8bb4-2102ea4e48b0:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 390
+        'y': 330
+      z: 1
+      embeds: []
+    531e4402-565d-4b29-9c5e-0c2ae284eb9b:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 150
+        'y': 330
+      z: 1
+      embeds: []
+      isrelatedto:
+        - edcb3b5d-d51d-450b-8bb4-2102ea4e48b0
+    99c1381c-b6d5-473a-a38c-52b3ab59d40b:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 930
+        'y': 330
+      z: 1
+      embeds: []
+      isrelatedto:
+        - edcb3b5d-d51d-450b-8bb4-2102ea4e48b0
+        - b624f20c-b645-4277-ad42-12373ed9fc75
+        - a706db49-260a-4370-ac47-a81af60d6461
+    460e37b9-5a5e-4e40-bb4f-3e3e1812de7a:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 540
+        'y': 380
+      z: 1
+      embeds: []
+      isrelatedto:
+        - 99c1381c-b6d5-473a-a38c-52b3ab59d40b
+    a706db49-260a-4370-ac47-a81af60d6461:
+      size:
+        width: 60
+        height: 60
+      position:
+        x: 930
+        'y': 230
+      z: 1
+      embeds: []
 Resources:
   GitHubWebHook:
     Type: 'AWS::SNS::Topic'
@@ -145,9 +254,7 @@ Resources:
       TopicName: WebsiteBuildLambda
       DisplayName: Receive Webhook calls from GitHub
       Subscription:
-        - Endpoint: !GetAtt
-            - GitHubHookLambda
-            - Arn
+        - Endpoint: !GetAtt GitHubHookLambda.Arn
           Protocol: lambda
     Metadata:
       'AWS::CloudFormation::Designer':
@@ -164,7 +271,7 @@ Resources:
   GitHubHookUser:
     Type: 'AWS::IAM::User'
     Properties:
-      UserName: !Ref GitHubHookUserName
+      UserName: !Ref AWSUserReceivingGitHubHooks
       Policies:
         - PolicyName: GitHubHookPolicy
           PolicyDocument:
@@ -185,26 +292,29 @@ Resources:
       Runtime: python2.7
       Handler: GitHubHook.handler
       Code:
-        S3Bucket: !Ref WebsiteCodeBuildCache
+        S3Bucket: !Ref WebsiteCFNArtifactsBucket
         S3Key: GitHubHook-Lambda.zip
       Description: Handle GitHub WebHooks
+      DeadLetterConfig:
+        TargetArn: !Ref WebsiteErrorQueue
       Environment:
         Variables:
-          WebsitetackName: !Sub "${AWS::StackName}"
-          WebsiteMasterBucket: !Sub "${WebsiteMasterBucket}"
-          WebsiteDNSName: !Sub "${WebsiteDNSName}"
-      Role: !GetAtt
-        - GitHubHookLambdaExecutionRole
-        - Arn
+          WebsiteStackName: !Sub '${AWS::StackName}'
+          WebsiteMasterBucket: !Sub '${WebsiteMasterBucket}'
+          WebsiteDNSName: !Sub '${WebsiteDNSName}'
+          WebsiteCFNArtifactsBucket: !Sub '${WebsiteCFNArtifactsBucket}'
+          GitHubUsername: !Sub '${GitHubUsername}'
+          GitHubAccessToken: !Sub '${GitHubAccessToken}'
+          WebsiteBranchCFNNotification: !Sub '${WebsiteBranchCFNNotification}'
+      Timeout: 300
+      Role: !GetAtt GitHubHookLambdaExecutionRole.Arn
     Metadata:
       'AWS::CloudFormation::Designer':
         id: 3de6d6e7-96b5-4bf9-841e-914051d50846
-  lambdaPermission:
+  GitHubHookLambdaPermission:
     Properties:
       Action: 'lambda:InvokeFunction'
-      FunctionName: !GetAtt
-        - GitHubHookLambda
-        - Arn
+      FunctionName: !GetAtt GitHubHookLambda.Arn
       Principal: sns.amazonaws.com
       SourceArn: !Ref GitHubWebHook
     Type: 'AWS::Lambda::Permission'
@@ -230,10 +340,40 @@ Resources:
         - PolicyName: ExecuteGitHubHookLambda
           PolicyDocument:
             Statement:
-              - Action:
-                  - 'codebuild:StartBuild'
+              - Action: 'codebuild:StartBuild'
                 Resource:
-                  - !Sub "arn:aws:codebuild:${AWS::Region}:${AWS::AccountId}:project/${WebsiteCodeBuild}"
+                  - !Sub >-
+                    arn:aws:codebuild:${AWS::Region}:${AWS::AccountId}:project/${WebsiteCodeBuild}
+                Effect: Allow
+              - Action:
+                  - 'cloudformation:CreateStack'
+                  - 'cloudformation:DescribeStacks'
+                  - 'cloudformation:DeleteStack'
+                Resource:
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}Branch*
+                Effect: Allow
+              - Action:
+                  - 's3:*'
+                  - 's3:PutBucketPolicy'
+                  - 's3:PutBucketWebsite'
+                  - 's3:PutBucket*'
+                Resource: !Sub 'arn:aws:s3:::*'
+                Effect: Allow
+              - Action: 'route53:ChangeResourceRecordSets'
+                Resource: !Sub 'arn:aws:route53:::hostedzone/${WebsiteHostedZone}*'
+                Effect: Allow
+              - Action:
+                  - 'route53:ListHostedZones'
+                  - 'route53:GetChange'
+                Resource: '*'
+                Effect: Allow
+        - PolicyName: PublishNotifications
+          PolicyDocument:
+            Statement:
+              - Action: 'sns:Publish'
+                Resource:
+                  - !Ref WebsiteBranchCFNNotification
+                  - !Ref WebsiteErrorQueue
                 Effect: Allow
       AssumeRolePolicyDocument:
         Statement:
@@ -243,14 +383,25 @@ Resources:
             Principal:
               Service:
                 - lambda.amazonaws.com
+    DependsOn:
+      - WebsiteErrorQueue
+      - WebsiteBranchCFNNotification
     Metadata:
       'AWS::CloudFormation::Designer':
         id: b624f20c-b645-4277-ad42-12373ed9fc75
-  BucketPolicy:
+  WebsiteErrorQueue:
+    Type: 'AWS::SNS::Topic'
+    Properties:
+      TopicName: WebsiteBuildLambdaDeadLetterQueue
+      DisplayName: SNS for failed activities of the Lambda and CodeBuild
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: edcb3b5d-d51d-450b-8bb4-2102ea4e48b0
+  WebsiteMasterBucketPolicy:
     Type: 'AWS::S3::BucketPolicy'
     Properties:
       PolicyDocument:
-        Id: DevSiteBranchPolicy
+        Id: WebsiteMasterBucketPolicy
         Version: 2012-10-17
         Statement:
           - Sid: PublicReadForGetBucketObjects
@@ -287,8 +438,6 @@ Resources:
         DefaultRootObject: index.html
         HttpVersion: http2
         IPV6Enabled: true
-        Aliases:
-          - !Ref WebsiteDNSName
         DefaultCacheBehavior:
           AllowedMethods:
             - GET
@@ -313,20 +462,39 @@ Resources:
     Metadata:
       'AWS::CloudFormation::Designer':
         id: 171e46d2-f281-4e5b-bdf5-792b7de9b847
+  WebsiteHostedZone:
+    Type: 'AWS::Route53::HostedZone'
+    Properties:
+      Name: !Sub '${WebsiteDNSName}.'
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: 36aeebf0-58a6-4554-8081-118ba6eef68e
   WebsiteMasterRecordSet:
     Type: 'AWS::Route53::RecordSet'
     Properties:
-      HostedZoneName: !Sub "testing.${WebsiteDNSName}."
-      Name: !Sub "testing.${WebsiteDNSName}."
+      Name: !Sub '${WebsiteDNSName}.'
       Type: A
       AliasTarget:
         HostedZoneId: Z2FDTNDATAQYW2
-        DNSName: !GetAtt
-          - WebsiteMasterDistribution
-          - DomainName
+        DNSName: !GetAtt WebsiteMasterDistribution.DomainName
+      HostedZoneId: !Ref WebsiteHostedZone
     Metadata:
       'AWS::CloudFormation::Designer':
         id: 5dadd00b-4e5c-4378-9cbb-8c979fe4216d
+    DependsOn:
+      - WebsiteHostedZone
+  WebsiteCert:
+    Type: 'AWS::CertificateManager::Certificate'
+    Properties:
+      DomainName: !Ref WebsiteDNSName
+      DomainValidationOptions:
+        - DomainName: !Ref WebsiteDNSName
+          ValidationDomain: !Ref WebsiteDNSName
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: b057b6c1-b7ca-46ff-be96-8e20ba857e06
+    DependsOn:
+      - WebsiteMasterRecordSet
   CodeBuildServiceRole:
     Type: 'AWS::IAM::Role'
     Properties:
@@ -348,13 +516,16 @@ Resources:
                   - 'logs:CreateLogGroup'
                   - 'logs:CreateLogStream'
                   - 'logs:PutLogEvents'
-                  - s3:GetObject
-                  - s3:PutObject
-                  - s3:GetObjectVersion
+                  - 's3:GetObject'
+                  - 's3:PutObject'
+                  - 's3:GetObjectVersion'
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: bb638d8a-6094-4cfd-9506-079048c2e1f0
   WebsiteCodeBuild:
     Type: 'AWS::CodeBuild::Project'
     Properties:
-      Name: WebsiteJekyllBuild
+      Name: !Sub '${AWS::StackName}-WebsiteJekyllBuild'
       ServiceRole: !GetAtt CodeBuildServiceRole.Arn
       Description: Build a branch of the website
       Artifacts:
@@ -366,18 +537,181 @@ Resources:
       Source:
         Location: !Ref GitHubWebsiteRepoURL
         Type: GITHUB
-  WebsiteCodeBuildCache:
-    Type: 'AWS::S3::Bucket'
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: 58a62a0c-c5e9-417d-8708-ff4027244a7b
+  CodeBuildFinishedRule:
+    Type: 'AWS::Events::Rule'
     Properties:
-      AccessControl: Private
+      Description: Rule fires when Website CodeBuild finishes
+      EventPattern:
+        source:
+          - aws.codebuild
+        detail-type:
+          - CodeBuild Build State Change
+        detail:
+          build-status:
+            - FAILED
+            - SUCCEEDED
+            - STOPPED
+          project-name:
+            - !Ref WebsiteCodeBuild
+      State: ENABLED
+      Targets:
+        - Arn: !Ref CodeBuildFinishedMessage
+          Id: WebsiteCodeBuildFinished
+  CodeBuildFinishedMessage:
+    Type: 'AWS::SNS::Topic'
+    Properties:
+      TopicName: !Sub "${AWS::StackName}CodeBuildFinished"
+      DisplayName: SNS for when CodeBuild finishes
+      Subscription:
+        - Endpoint: !GetAtt CodeBuildFinishedLambda.Arn
+          Protocol: lambda
+  CodeBuildFinishedLambda:
+    Type: 'AWS::Lambda::Function'
+    Properties:
+      FunctionName: !Sub "${AWS::StackName}CodeBuildFinishedLambdaFunction"
+      Runtime: python2.7
+      Handler: GitHubHook.codebuilder_result_handler
+      Code:
+        S3Bucket: !Ref WebsiteCFNArtifactsBucket
+        S3Key: GitHubHook-Lambda.zip
+      Description: Handle events from when the CodeBuild project finishes
+      DeadLetterConfig:
+        TargetArn: !Ref WebsiteErrorQueue
+      Environment:
+        Variables:
+          WebsiteStackName: !Sub '${AWS::StackName}'
+          WebsiteMasterBucket: !Sub '${WebsiteMasterBucket}'
+          WebsiteDNSName: !Sub '${WebsiteDNSName}'
+          WebsiteCFNArtifactsBucket: !Sub '${WebsiteCFNArtifactsBucket}'
+          GitHubUsername: !Sub '${GitHubUsername}'
+          GitHubAccessToken: !Sub '${GitHubAccessToken}'
+          WebsiteBranchCFNNotification: !Sub '${WebsiteBranchCFNNotification}'
+      Role: !GetAtt GitHubHookLambdaExecutionRole.Arn
+  CodeBuildFailedRule:
+    Type: 'AWS::Events::Rule'
+    Properties:
+      Description: >-
+        Rule fires when Website CodeBuild fails to send notification to error
+        SNS
+      EventPattern:
+        source:
+          - aws.codebuild
+        detail-type:
+          - CodeBuild Build State Change
+        detail:
+          build-status:
+            - FAILED
+      State: ENABLED
+      Targets:
+        - Arn: !Ref WebsiteErrorQueue
+          Id: WebsiteCodeBuildError
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: 531e4402-565d-4b29-9c5e-0c2ae284eb9b
+  WebsiteBranchCFNNotification:
+    Type: 'AWS::SNS::Topic'
+    Properties:
+      TopicName: WebsiteBranchCFNNotification
+      DisplayName: SNS for activities creating a website branch stack
+      Subscription:
+        - Endpoint: !GetAtt WebsiteBranchCNFStatus.Arn
+          Protocol: lambda
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: 460e37b9-5a5e-4e40-bb4f-3e3e1812de7a
+  WebsiteBranchCNFStatus:
+    Type: 'AWS::Lambda::Function'
+    Properties:
+      FunctionName: WebsiteBranchCNFStatusFunction
+      Runtime: python2.7
+      Handler: GitHubHook.branch_cfn_handler
+      Code:
+        S3Bucket: !Ref WebsiteCFNArtifactsBucket
+        S3Key: GitHubHook-Lambda.zip
+      Description: Handle status messages from website branch stack creation
+      DeadLetterConfig:
+        TargetArn: !Ref WebsiteErrorQueue
+      Environment:
+        Variables:
+          WebsiteStackName: !Sub '${AWS::StackName}'
+          WebsiteMasterBucket: !Sub '${WebsiteMasterBucket}'
+          WebsiteDNSName: !Sub '${WebsiteDNSName}'
+          WebsiteCFNArtifactsBucket: !Sub '${WebsiteCFNArtifactsBucket}'
+          GitHubUsername: !Sub '${GitHubUsername}'
+          GitHubAccessToken: !Sub '${GitHubAccessToken}'
+      Role: !GetAtt WebsiteBranchBuildLambdaExecutionRole.Arn
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: 99c1381c-b6d5-473a-a38c-52b3ab59d40b
+  WebsiteBranchBuildLambdaExecutionRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      Path: /
+      Policies:
+        - PolicyName: CloudwatchLogs
+          PolicyDocument:
+            Statement:
+              - Action:
+                  - 'logs:CreateLogGroup'
+                  - 'logs:CreateLogStream'
+                  - 'logs:GetLogEvents'
+                  - 'logs:PutLogEvents'
+                Resource:
+                  - 'arn:aws:logs:*:*:*'
+                Effect: Allow
+        - PolicyName: ExecuteGitHubHookLambda
+          PolicyDocument:
+            Statement:
+              - Action: 'codebuild:StartBuild'
+                Resource:
+                  - !Sub >-
+                    arn:aws:codebuild:${AWS::Region}:${AWS::AccountId}:project/${WebsiteCodeBuild}
+                Effect: Allow
+        - PolicyName: PublishNotifications
+          PolicyDocument:
+            Statement:
+              - Action: 'sns:Publish'
+                Resource:
+                  - !Ref WebsiteErrorQueue
+                Effect: Allow
+      AssumeRolePolicyDocument:
+        Statement:
+          - Action:
+              - 'sts:AssumeRole'
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+    Metadata:
+      'AWS::CloudFormation::Designer':
+        id: a706db49-260a-4370-ac47-a81af60d6461
 Parameters:
   GitHubWebsiteRepoURL:
     Type: String
-  GitHubHookUserName:
+    Description: URL of the GitHub repository containing the Jekyll website source files
+  AWSUserReceivingGitHubHooks:
     Type: String
     Default: GitHub_Website_WebHook
+    Description: The AWS username used by GitHub to receive webhook messages
+  GitHubUsername:
+    Type: String
+    Description: >-
+      The userid of a GitHub user with permissions to receive Status API
+      messages on repo
+  GitHubAccessToken:
+    Type: String
+    Description: The Personal Access Token for the 'GitHubUsername' user
   WebsiteDNSName:
     Type: String
+    Description: Domain name of the website being built
+  WebsiteCFNArtifactsBucket:
+    Type: String
+    Description: >-
+      The name of an existing private S3 bucket that contains the CloudFormation
+      artifacts (such as Lambda code)
 Mappings:
   Region2S3WebsiteSuffix:
     us-east-1:
@@ -411,18 +745,16 @@ Outputs:
     Value: !Ref GitHubWebHook
     Description: SNS topic to receive messages from GitHub pre-build integration
     Export:
-      Name: !Sub "${AWS::StackName}-GitHubWebHookId"
+      Name: !Sub '${AWS::StackName}-GitHubWebHookId'
   AccessKeyGitHubHookUser:
     Value: !Ref GitHubHookUserKey
   SecretKeyGitHubHookUser:
-    Value: !GetAtt
-      - GitHubHookUserKey
-      - SecretAccessKey
+    Value: !GetAtt GitHubHookUserKey.SecretAccessKey
   MasterBucketName:
     Value: !Ref WebsiteMasterBucket
     Description: Name of S3 bucket that holds the website of the master branch
     Export:
-      Name: !Sub "${AWS::StackName}-MasterBucketName"
+      Name: !Sub '${AWS::StackName}-MasterBucketName'
   MasterBucketURL:
     Value: !Join
       - ''
@@ -437,4 +769,4 @@ Outputs:
     Value: !Ref WebsiteDNSName
     Description: DNS name of the developer documentation
     Export:
-      Name: !Sub "${AWS::StackName}-WebsiteDNSName"
+      Name: !Sub '${AWS::StackName}-WebsiteDNSName'
