Update api docs config FOLIO-903
Add contact_category vendor_category for mod-vendors

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -144,4 +144,6 @@ mod-vendors:
     directory: ramls
     files:
       - vendor
+      - contact_category
+      - vendor_category
     ramlutil: ramls/raml-util
