Update api docs config FOLIO-903
Add mod-finance

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -118,6 +118,19 @@ mod-user-import:
       - import
     ramlutil: null
 
+mod-finance:
+  - label: null
+    directory: ramls
+    files:
+      - budget
+      - fiscal_year
+      - fund_distribution
+      - funds
+      - ledger
+      - tag
+      - transaction
+    ramlutil: ramls/raml-util
+
 mod-notes:
   - label: null
     directory: ramls
