Use remote theme ability FOLIO-829
Using Jekyll 3.6.2 and jekyll-remote-theme

Pin to current classic-jekyll-theme 1.9.4

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,10 @@ url: "http://dev.folio.org" # the base hostname & protocol for your site
 google_analytics: UA-79833310-3
 
 # Build settings
+remote_theme: Balancingrock/classic-jekyll-theme@1.9.4
 markdown: kramdown
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
   - jekyll-gist
 
